# aiqfome

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
aiqfome/: crud.py  database.py  dependencies.py  fakestoreapi.py  main.py  models.py  schemas.py  security.py
aiqfome/routers/: auth.py  clientes.py  favoritos.py
tests/: conftest.py  test_main.py
